fixed dropdown alignment

--- a/src/layouts/ViewNav/styles.module.css
+++ b/src/layouts/ViewNav/styles.module.css
@@ -43,6 +43,7 @@
   background-color: white;
   width: 100%;
   overflow: hidden;
+  top: 46px;
 }
 
 .dropdown.hidden {
